--- a/index.html
+++ b/index.html
@@ -1,36 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>I love owls</title>
+    <title>Hello world</title>
   </head>
   <body>
     
-    <h1>Owls</h1>
+    <h1>Amina webpage</h1>
 
-    <p>Most birds of prey sport eyes on the sides of their heads,
-      but the stereoscopic nature of the owl's forward-facing eyes permits the greater
-      sense of depth perception necessary for low-light hunting.
+    <p>I am a french girl who loves singing, i love music and i love my family
     </p>
               
   </body>
 </html>
-<div>
-    <img src="images/logo.png" alt="codebar.io">
-  </div>
-<ul>
-      <li><img src="images/img1.jpg" alt="adorable"></li>
-      <li><img src="images/img2.jpg" alt="lovely"></li>
-       <li><img src="images/img3.jpg" alt="cuddly"></li>
-</ul>
-<div>
-        <a href="https://www.youtube.com/watch?v=gBjnfgnwXic">
-          <img src="images/img4.jpg" alt="cute owl">
-          <img src="images/img5.jpg" alt="another cute owl">
-          <img src="images/img6.jpg" alt="another cute owl">
-          <br>
-          Watch the video
-        </a>
- </div>
  <p>
     Most birds of prey sport eyes on the sides of their heads,
     but the stereoscopic nature of
@@ -55,4 +36,7 @@
         </li>
     </ul>
 
-<a href="https://twitter.com/home?status=I love owls! via @codebar">Share your love of owls on twitter</a>
+<a href="https://twitter.com/home?status=I love owls! via @codebar">owls</a>
+<a href="https://codepen.io/amina1515/pen/jOEqQJv">introduction to coding terminology</a>
+<a href="https://codepen.io/amina1515/pen/JjoXeQY">css STYLES</a>
+<a href="https://codepen.io/amina1515/pen/rNaeQXE">html</a>
